--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "formik": "^2.4.2",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
